--- a/FrontEnd_Server/src/main/resources/static/index.html
+++ b/FrontEnd_Server/src/main/resources/static/index.html
@@ -6,16 +6,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div>
-    <div>
+<div class="container">
+    <div class="top-header">
         <nav>
-            <ul>
+            <ul class="menu-list">
                 <!--              <li><a class="menu-item" href="#!login">login</a></li>-->
-                <li><a href="#!products">catalog</a></li>
-                <li><a href="#!cart">cart</a></li>
-                <li><a  href="#!orders">orders</a></li>
+                <li><a class="menu-item" href="#!product">catalog</a></li>
+                <li><a class="menu-item" href="#!cart">cart</a></li>
+                <li><a class="menu-item"  href="#!orders">orders</a></li>
             </ul>
         </nav>
         <div ng-controller="loginController">
