--- a/FrontEnd_Server/src/main/resources/static/index.html
+++ b/FrontEnd_Server/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
                 <button ng-click="signUp()">sign up</button>
             </div>
             <div ng-if="isUserLogin()">
-                <span>{{user.login}}</span>
+                <a href="#!details">{{user.login}}</a>
                 <button ng-click="logOut()">log out</button>
             </div>
         </div>
@@ -38,6 +38,7 @@
 </div>
 <script src="js/app.js"></script>
 <script src="js/controllers/loginController.js"></script>
+<script src="js/controllers/detailsController.js"></script>
 <script src="js/controllers/productsController.js"></script>
 <script src="js/controllers/cartController.js"></script>
 <script src="js/controllers/ordersController.js"></script>
